--- a/blog-single.html
+++ b/blog-single.html
@@ -165,7 +165,7 @@
                   </div>
                   <div class="comment-body">
                     <h3>Pour Khied</h3>
-                    <div class="meta">April 12, 2020 at 1:21am</div>
+                    <div class="meta">April 1, 2020 at 8:09am</div>
                     <p>Masarap yung carrots mahal nga lang, 69 isa.</p>
                     <p><a href="#" class="reply">Reply</a></p>
                   </div>
@@ -177,7 +177,7 @@
                   </div>
                   <div class="comment-body">
                     <h3>Señorita</h3>
-                    <div class="meta">April 12, 2020 at 1:21am</div>
+                    <div class="meta">April 12, 2020 at 5:36 am</div>
                     <p>The carrots are so masarap, pang world class. Masyadong cheap ang price. </p>
                     <p><a href="#" class="reply">Reply</a></p>
                   </div>
@@ -189,7 +189,7 @@
                       </div>
                       <div class="comment-body">
                         <h3>Vladimir Vladimirovich Putin</h3>
-                        <div class="meta">April 12, 2020 at 1:21am</div>
+                        <div class="meta">April 18, 2020 at 4:20pm</div>
                         <p>Блядь! Эта еда пугает. я ненавижу ненавижу оранжевый цвет, такое чувство, будто я ем Трампа </p>
                         <p><a href="#" class="reply">Reply</a></p>
                       </div>
@@ -202,7 +202,7 @@
                           </div>
                           <div class="comment-body">
                             <h3>Baklang Nagcocomputer</h3>
-                            <div class="meta">April 12, 2020 at 1:21am</div>
+                            <div class="meta">April 21, 2020 at 6:26am</div>
                             <p>Holabels! May kwento akizkis, gorabels ang lola nyey sa farmers para mag-buyla meslu ng mga carrotsbells syempre kailangan ko mag-breakfastlu diba! Syempre sayla ko yung mga carrotbells pila akez ganyan oh carrotbells carrotbells pak! Pag ka getlas mes ng carrotbells eto ang nabili kes.......Mars..ang dako..ang daks ems! Mars, kasing laki ng fesang mey..oh! Mars parang ano eh....Mars nakakamatay oh oh look oh hanggang ditobels eh..Laki mars oh..oh..Mars grabe ngayon lang ako makakakain ng ganitong carrotbells.....oh diba..hello oh oh saan ka na? nandito na ako..oo, diba pwedeng gawing nyelphone oh diba..pwedeng gawing face..pwedeng iganyan-ganyan sa fesang..emsss..eme..laki SiSss ngayon lang ako makakakain ng ganito kalaking carrotbells ang daks talaga sis, kahit nung nasa qatar ako walang ganito kalaking carrotbells sis..super daks diba..sUpermarkets aRe sHaKing sIs..ang laki sis eh oh, Mars ang laki!! I can’t</p>
                             <p><a href="#" class="reply">Reply</a></p>
                           </div>
@@ -214,7 +214,7 @@
                                 </div>
                                 <div class="comment-body">
                                   <h3>anonymous</h3>
-                                  <div class="meta">April 12, 2020 at 1:21am</div>
+                                  <div class="meta">April 25, 2020 at 7:24am</div>
                                   <p> My crocodile hates the petchay.	</p>
                                   <p><a href="#" class="reply">Reply</a></p>
                                 </div>
@@ -232,7 +232,7 @@
                   </div>
                   <div class="comment-body">
                     <h3>Eren Yeager</h3>
-                    <div class="meta">April 12, 2020 at 1:21am</div>
+                    <div class="meta">April 30, 2020 at 5:55pm</div>
                     <p>にんじんが大好き, Tatakae!! Sasageyo! </p>
                     <p><a href="#" class="reply">Reply</a></p>
                   </div>
@@ -281,12 +281,12 @@
             <div class="sidebar-box ftco-animate">
               <div class="categories">
                 <h3>Services</h3>
-                <li><a href="#">Relation Problem <span class="fa fa-chevron-right"></span></a></li>
-                <li><a href="#">Couples Counseling <span class="fa fa-chevron-right"></span></a></li>
-                <li><a href="#">Depression Treatment <span class="fa fa-chevron-right"></span></a></li>
-                <li><a href="#">Family Problem <span class="fa fa-chevron-right"></span></a></li>
-                <li><a href="#">Personal Problem <span class="fa fa-chevron-right"></span></a></li>
-                <li><a href="#">Business Problem <span class="fa fa-chevron-right"></span></a></li>
+                <li><a href="#">Seed Problems <span class="fa fa-chevron-right"></span></a></li>
+                <li><a href="#">Insecticides and others <span class="fa fa-chevron-right"></span></a></li>
+                <li><a href="#">Loam Soil for Sale! <span class="fa fa-chevron-right"></span></a></li>
+                <li><a href="#">Land for Sale!<span class="fa fa-chevron-right"></span></a></li>
+                <li><a href="#">Try this at home. <span class="fa fa-chevron-right"></span></a></li>
+                <li><a href="#">Do not click this. <span class="fa fa-chevron-right"></span></a></li>
               </div>
             </div>
 
