--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
                   <div class="text">
                     <p class="mb-4">The vegetable are fresh. Maalden ko kayo</p>
                     <div class="d-flex align-items-center">
-                    	<div class="user-img" style="background-image: url(images/person_1.jpg)"></div>
+                    	<div class="user-img" style="background-image: url(http://contents.pep.ph/images2/2017/10/10/alden-2.jpg)"></div>
                     	<div class="pl-3">
 		                    <p class="name">Alden Richards</p>
 		                    <span class="position">Former Child</span>
@@ -428,7 +428,7 @@
                   <div class="text">
                     <p class="mb-4">당근은 화살 쏘기의 모범 사례 표적입니다.</p>
                     <div class="d-flex align-items-center">
-                    	<div class="user-img" style="background-image: url(images/person_2.jpg)"></div>
+                    	<div class="user-img" style="background-image: url(https://m.media-amazon.com/images/M/MV5BOGE4ZmZhNWQtNDllMi00NmY5LThhMWQtMzZhOTc1NDMzZDk0XkEyXkFqcGdeQXVyMjIyNzU0OA@@._V1_.jpg)"></div>
                     	<div class="pl-3">
 		                    <p class="name">Jumong</p>
 		                    <span class="position">Archer from Korea</span>
@@ -443,7 +443,7 @@
                   <div class="text">
                     <p class="mb-4">Wow, nice carrots.</p>
                     <div class="d-flex align-items-center">
-                    	<div class="user-img" style="background-image: url(images/person_3.jpg)"></div>
+                    	<div class="user-img" style="background-image: url(https://i.mydramalist.com/Wb1x5c.jpg)"></div>
                     	<div class="pl-3">
 		                    <p class="name">Rocco Nacino</p>
 		                    <span class="position"> GMA Fan</span>
@@ -458,7 +458,7 @@
                   <div class="text">
                     <p class="mb-4">Tunay ngang masarap ang produktong pilipino. Mabuhay ang Pilipinas!</p>
                     <div class="d-flex align-items-center">
-                    	<div class="user-img" style="background-image: url(images/person_1.jpg)"></div>
+                    	<div class="user-img" style="background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQxLpUYRy8q3aEW8tIinfW7Nf7UfAeLNb1k0A&usqp=CAU)"></div>
                     	<div class="pl-3">
 		                    <p class="name">Antonio Luna</p>
 		                    <span class="position">PNP Chief General </span>
@@ -473,7 +473,7 @@
                   <div class="text">
                     <p class="mb-4">Th-th-th-the carrots are good, I lo-lo-lo-love petchay. Di ako nag hire ng trolls</p>
                     <div class="d-flex align-items-center">
-                    	<div class="user-img" style="background-image: url(images/person_2.jpg)"></div>
+                    	<div class="user-img" style="background-image: url(https://img-s-msn-com.akamaized.net/tenant/amp/entityid/AAU73Y7.img?h=350&w=624&m=6&q=60&u=t&o=t&l=f&f=jpg&x=374&y=316)"></div>
                     	<div class="pl-3">
 		                    <p class="name">Bong Bong Marcos</p>
 		                    <span class="position">Corrupt President</span>
