--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
                     	<div class="user-img" style="background-image: url(https://m.media-amazon.com/images/M/MV5BOGE4ZmZhNWQtNDllMi00NmY5LThhMWQtMzZhOTc1NDMzZDk0XkEyXkFqcGdeQXVyMjIyNzU0OA@@._V1_.jpg)"></div>
                     	<div class="pl-3">
 		                    <p class="name">Jumong</p>
-		                    <span class="position">Archer from Korea</span>
+		                    <span class="position">Archer</span>
 		                  </div>
 	                  </div>
                   </div>
@@ -475,8 +475,8 @@
                     <div class="d-flex align-items-center">
                     	<div class="user-img" style="background-image: url(https://img-s-msn-com.akamaized.net/tenant/amp/entityid/AAU73Y7.img?h=350&w=624&m=6&q=60&u=t&o=t&l=f&f=jpg&x=374&y=316)"></div>
                     	<div class="pl-3">
-		                    <p class="name">Bong Bong Marcos</p>
-		                    <span class="position">Corrupt President</span>
+		                    <p class="name">Bling Blong Morcus</p>
+		                    <span class="position">Corrupt Manager</span>
 		                  </div>
 	                  </div>
                   </div>
